[package]
name = "rusty-rakoon"
version = "0.2.0"
authors = ["Arne Redlich <arne.redlich@googlemail.com>"]
license = "Apache 2.0"

[dependencies]
byteorder = "1.2"
bytes = "0.4"
futures = "0.1"
libc = "0.2"
log = "0.3"
num = "0.1"
num-traits = "0.1"
num-derive = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"

[dev-dependencies]
uuid = { version = "0.6", features = ["v4"] }
env_logger = "*"
rand = "0.3"
