[package]
name = "rusty-rakoon"
version = "0.3.0"
authors = ["Arne Redlich <arne.redlich@googlemail.com>"]
license = "Apache 2.0"
edition = "2018"

[dependencies]
bytes = "^0.4"
futures = "^0.1"
libc = "0.2"
log = "0.3"
num = "0.1"
num-traits = "0.1"
num-derive = "0.1"
tokio = "^0.1.8"
tokio-codec = "^0.1"
tokio-io = "^0.1.7"
tokio-service = "^0.1"

[dev-dependencies]
uuid = { version = "0.6", features = ["v4"] }
env_logger = "*"
rand = "0.3"
tokio-current-thread = "^0.1"
tokio-executor = "^0.1"
tokio-reactor = "^0.1"
tokio-timer = "^0.2"
