[package]
name = "rusty-rakoon"
version = "0.3.0"
authors = ["Arne Redlich <arne.redlich@googlemail.com>"]
license = "Apache 2.0"
edition = "2018"

[dependencies]
bytes = "1"
futures = "^0.3"
futures-util = "^0.3"
libc = "0.2"
log = "0.3"
num = "0.1"
num-traits = "0.1"
num-derive = "0.1"
tokio = { version = "1", features = ["net", "rt"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
tower-service = "0.3"

[dev-dependencies]
env_logger = "*"
lazy_static = "*"
tokio = { version = "1", features = ["macros"] }
uuid = { version = "0.6", features = ["v4"] }
rand = "0.3"
